# wd-tagger.app

./: README.md  biome.json  package.json  svelte.config.js  vite.config.js
src/: bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tagger.rs
src/components/: dropzone.svelte  modelSelect.svelte  probabilitiesDisplay.svelte
src/lib/: model.ts  tags.ts
src/routes/: +layout.svelte  +page.svelte
src/schema/: probabilities.ts
src/styles/: global.css
